# srbstp

./: .gitignore  LICENSE  README.md  nb_model.json  pyproject.toml  requirements.txt
.github/workflows/: blank.yml  pytest.yml  tests.yml  update.yml
examples/: uniquetest_classifiers.py  uniquetest_pos_tagger.py  uniquetest_translator.py  uniquetest_utils.py
src/srbstp/classifiers/: sr_naive_bayes.py  train_nb_model.py
src/srbstp/data/: sr_lexicon.py  sr_stopwords.py
src/srbstp/sentiments/: sr_sentiment_analyzer.py
src/srbstp/taggers/: sr_tagger.py  train_pos_tagger.py
src/srbstp/tokenizers/: sr_tokenizer.py
src/srbstp/translations/: sr_translator.py
src/srbstp/utils/: sr_normalizer.py
tests/: README.md  test_lexicon.py  test_naive_bayes.py  test_normalizer.py  test_sentiment.py  test_stopwords.py  test_tokenizer.py  test_translator.py
